# enki

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/playground/: CMakeLists.txt  Playground.cpp
examples/socket_control/: CMakeLists.txt  README.md  enkiSocketControl.cpp  enkiSocketControl.h  robot_controller.py
examples/visual_test/: BasicExample.cpp  CMakeLists.txt  README.md  VisualTest.cpp
